--- a/Work.html
+++ b/Work.html
@@ -42,7 +42,7 @@
 
         <div id="workcards" class="cardp">
         <div class="content">
-            <h3 class="text-white py-4">Proscan Imaging</h3>
+            <h3 class="text-white py-4 display-6">Proscan Imaging</h3>
             <img class="py-4" id="proscan-logo" src="./img/proscanImagingExcellenceLogo.png"
                 alt="Logo for ProScan Imaging">
 
@@ -74,7 +74,7 @@
             <div id="workcards"  class="cardp">
             <div class="content">
                 
-                    <h3 class="text-white">Blueboard Inc.</h3>
+                    <h3 class="text-white display-6 py-4">Blueboard Inc.</h3>
                     <img class="py-4" id="blueboard-logo" src="./img/blueboard-logo.webp" alt="blueboard inc logo">
 
                     <div class="text-white panel-heading fw-bold py-4">November 2022 - May 2023</div>
@@ -112,7 +112,7 @@
             <div id="workcards" class="cardp">
             <div class="content">
              
-                    <h3 class="py-4 text-white">Fidelity Investments</h3>
+                    <h3 class="py-5 text-white display-6">Fidelity Investments</h3>
                     <img class="py-4 img-fluid" id="fidelity-logo" src="./img/fidelity-investments-logo-3.png"
                         alt="fidelity investments logo">
                     <div class="panel panel-default">
