--- a/portfolio.html
+++ b/portfolio.html
@@ -111,10 +111,10 @@
                     <div class=" col-6 col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
                         <div id="cardp" class="card">
 
-                        <img id=".card-img" src="./img/Screenshot 2024-03-06 091358.png"
+                        <img id=".card-img" src="./img/Retro-Drumb-Kit.png"
                             alt="A preview of our  project.">
                         <div class="card-content justify-content-center bg-white">
-                            <h2>Pet Store</h2>
+                            <h2>Drum Kit</h2>
                             <!--paragraph-->
                             <div class="mx-5">
                                 <p class="text-black mx-3 my-3 px-2 py-2">We created
@@ -145,10 +145,10 @@
             <!-- Project 4 -->
                 <div class="col-6 col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
                     <div id="cardp" class="card">
-                    <img id=".card-img" src="./img/product-landing-project.png"
-                        alt="A preview of our Product Landing Page project.">
+                    <img id=".card-img" src="./img/Screenshot 2024-03-06 091358.png"
+                        alt="A preview of our Pet Store project.">
                     <div class="card-content justify-content-center bg-white">
-                        <h2>Product Landing Page Project</h2>
+                        <h2>Pet Store Project</h2>
                         <!--paragraph-->
                         <div class="mx-5">
                             <p class="text-black mx-3 my-3 px-2 py-2">We created
@@ -179,9 +179,9 @@
                         <div id="cardp" class="card">
 
                         <img id=".card-img" src="./img/madlibs updated version.png"
-                            alt="A preview of our Mad Libs project.">
+                            alt="A preview of our Fun Facts project.">
                         <div class="card-content justify-content-center bg-white">
-                            <h2>Mad Libs Intro Project</h2>
+                            <h2>React Fun Facts</h2>
                             <!--paragraph-->
                             <div class="mx-5">
                                 <p class="text-black mx-3 my-3 px-2 py-2">We created
