--- a/contact.html
+++ b/contact.html
@@ -35,18 +35,18 @@
 
     <div class="container">
         <!-- forms -->
-        <div id="Contact" class="cardp col-10 bg-black">
+        <div id="Contact" class="cardp col-10">
             <div class="column">
             
                 <!-- <h3 class="text-center display-4 text-white">Contact</h3> -->
-                <p class="text-center text-white py-2 display-6 fw-bold"><em>Leave me a message!</em></p>
+                <p class="text-center text-primary py-2 display-6 fw-bold"><em>Leave me a message!</em></p>
 
 
                 <div id="contactDetails" class="row">
-                    <p class="text-white fw-bold"><i class="fa-solid fa-house-chimney fa-lg"></i> Cincinnati,
+                    <p class="text-black fw-bold"><i class="fa-solid fa-house-chimney fa-lg"></i> Cincinnati,
                         Ohio,
                         US</p>
-                    <p class="text-white mx-2 fw-bold"><i class="fa-solid fa-envelope fa-lg"></i>
+                    <p class="text-black mx-2 fw-bold"><i class="fa-solid fa-envelope fa-lg"></i>
                         oliverjarjosa@gmail.com
                     </p>
 
@@ -75,10 +75,10 @@
                         <div class="row">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3090.611176869781!2d-84.37845712353605!3d39.228995627069644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8840536f0dec042f%3A0x54c665d266579f3e!2sKable%20Academy!5e0!3m2!1sen!2sus!4v1709822438219!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-                        <div class="container py-4"><p class="fw-bold my-2 text-white">Kable Academy</p><p class="fw-bold my-2 text-white">
+                        <div class="container py-4"><p class="fw-bold my-2 text-black">Kable Academy</p><p class="fw-bold my-2 text-black">
                             4901 Hunt Rd Ste 200
                         </p>
-                        <p class="fw-bold my-2 text-white">Blue Ash, OH 45242</p>
+                        <p class="fw-bold my-2 text-black">Blue Ash, OH 45242</p>
                         </div>
                         </div>
                     </div>
