--- a/education.html
+++ b/education.html
@@ -31,8 +31,8 @@
     </nav>
     </header>
     <main>
-      <div class="container text-center">
-        <div class="col-8">
+      <div class="container text-center" style="padding-left: 15vh; overflow-x: hidden;">
+        <div class="col-10">
           <!-- <div class="card border-0 border-bottom border-primary shadow-sm"> -->
           <!-- <ul class="mt-2 py-2 text-black"> -->
               <div class="p-4 bg-light">
