newest layout changes

--- a/education.html
+++ b/education.html
@@ -40,7 +40,7 @@
                   <h6 class=" display-6">Certificate of Web Development</h6>
                   <h4>Kable Academy</h4>
                   <p class="panel-heading fw-bold">January 2024 - March 2024</p>
-                  <img id="kable-logo" src="./img/favicon-kable-academy.webp" alt="kable academy logo">
+                  <img id="kable-logo" src="./img/favicon-kable-academy.webp" alt="kable academy logo" class="py-4">
   
                   <div class="container">
                       <ul id="list">
