--- a/education.html
+++ b/education.html
@@ -51,19 +51,22 @@
 
     </header>
     <main>
-      <div class="container text-center" style="padding-left: 15vh; overflow-x: hidden;">
+      <div id="education" class="container text-center" style="padding-left: 15vh; overflow-x: hidden; margin-top: 10vh;">
         <div class="col-10">
           <!-- <div class="card border-0 border-bottom border-primary shadow-sm"> -->
           <!-- <ul class="mt-2 py-2 text-black"> -->
-              <div class="p-4 bg-light">
-                  <h4 class="mb-4 text-secondary display-5">Education</h4>
-                  <h6 class=" display-6">Certificate of Web Development</h6>
-                  <h4>Kable Academy</h4>
-                  <p class="panel-heading fw-bold">January 2024 - March 2024</p>
+              <div class="p-4" >
+                  <h4 class="mb-4 display-5" style="color:darkgrey">Education</h4>
+                  <br>
+                  <hr class="text-white">
+                  <br>
+                  <h6 class=" display-6 text-info">Certificate of Web Development</h6>
+                  <h4 class="text-white">Kable Academy</h4>
+                  <p class="panel-heading fw-bold text-white">January 2024 - March 2024</p>
                   <img id="kable-logo" src="./img/favicon-kable-academy.webp" alt="kable academy logo" class="py-4">
   
                   <div class="container">
-                      <ul id="list">
+                      <ul id="list" class="text-white">
                           <li class="py-2">Resolved front-end issues through debugging and troubleshooting.
                           </li>
                           <li class="py-2">Completed various projects with an emphasis on user experience and
@@ -75,41 +78,39 @@
                       </ul>
                   </div>
                   <br>
-                  <hr>
+                  <hr class="text-white">
                   <br>
   
                   <ul class="mt-2 py-2 text-black">
-                      <h6 class="display-6">BA of Psychology</h6>
-                      <h4>University of Cincinnati</h4>
-                      <p class="panel-heading fw-bold">September 2019 - December 2021</p>
+                      <h6 class="display-6 text-info">BA of Psychology</h6>
+                      <h4 class="text-white">University of Cincinnati</h4>
+                      <p class="panel-heading fw-bold text-white">September 2019 - December 2021</p>
                       <img id="uc-logo"
                           src="./img/Cincinnati-Bearcats-Logo.png"
                           alt="">
   
-                     
-                          <ul id="list">
-                              <li class="text-center" style="list-style: none;">
-                            <b>Honor roll:</b> 2019 - 2021</li>
-                          </ul>
                           <br>
-                      <hr>
+                      <hr class="text-white">
                      <br>
   
-                      <h6 class=" display-6">High School Diploma</h6>
-                      <h4 id="school-title">Oldfields School</h4>
-                      <p class="panel-heading fw-bold my-4">May 2013 - June 2016</p>
+                      <h6 class=" display-6 text-info">High School Diploma</h6>
+                      <h4 id="school-title" class="text-white">Oldfields School</h4>
+                      <p class="panel-heading fw-bold my-4 text-white">May 2013 - June 2016</p>
                       <img id="os-logo"
                           src="./img/os-logo.jpg"
                           alt="Oldfields School logo">
   
                       <div class="panel-body">
-                          <ul style="list-style: none;" id="list">
+                          <ul id="list" class="text-white">
                               <li><b>Honor Roll:</b> 2015 - 2016</li>
                               <li><b>Merit Roll:</b> 2013 - 2015</li>
                               <li><b>Student organizer of the Community Service Commity.</b></li>
                           </ul>
                       </div>
                     </div>
+                    <br>
+                    <hr class="text-white">
+                    <br>
                     </div>
   
   </main>
