--- a/index.html
+++ b/index.html
@@ -91,22 +91,21 @@
 
     <main>
         <!--Intro section-->
-        <div class="container">
+        <div class="container fluid">
             <div class="row offset-2">
                 <div>
-                    <div class="card col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 py-5 px-4">
+                    <div class="card col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 py-5 px-4">
                         <h2 class="display-2"
                             style="color: HSLA(180, 100%, 10%, 1); font-family: 'Copperplate'; font-weight: 600;">Oliver Jarjosa
                         </h2>
-                        <h3 class="text-dark mt-4 px-4">Junior Web Developer</h3>
+                        <h3 class="text-light mt-4 px-4 my-4">Junior Web Developer</h3>
                         <div class="frame">
                             <img class="img-profile img-fluid" id="profile-photo" src="./img/20240204_163032.jpg" alt="Profile photo of Oliver Jarjosa">
                            </div>
                         
-                        <p class="text-secondary my-4" style="font-size:small;"><b>In my career and educational experiences, I've accumulated experience
-                                with interpersonal relationships, adhering to deadlines, and web development.</b></p>
+                        <p class="text-info my-4" style="font-size:small;"><b>Throughout my career journey and educational pursuits, I've cultivated a variety of skills encompassing interpersonal dynamics, adhering to deadlines, and honing my craft in web development. My history in art and design has transformed into a passion for the ever expanding field of technology.</b></p>
 
-                        <ul id="about-list" class=" text-black mx-4 my-4 start-0">
+                        <ul id="about-list" class=" text-white mx-4 my-4 start-0">
                             <li class="py-2">Profound understanding of HTML, CSS & Java Script.
                             </li>
 
@@ -126,28 +125,28 @@
 
 
                     </div>
-                </div>
+              
 
                 <!-- Skills Section-->
                 <div id="containerskills" class="card text-white offset-2">
                     <!-- <div class=" bg-light"> -->
-                    <h3 class="mb-4 text-dark display-6 text-center my-4 py-4">Skills
+                    <h3 class="mb-4 text-light display-6 text-center my-4 py-4">Skills
                     </h3>
                     <div class="row">
                         <ul id="skills-list" class="text-white col-6" style="text-align: start;">
-                            <li class="px-4 text-primary">
+                            <li class="px-4 text-info">
                                 <p><i id="skills-icons" class="fa-brands fa-html5 fa-2xl"></i></p>
                             </li>
-                            <li class="px-4 text-primary">
+                            <li class="px-4 text-info">
                                 <p><i id="skills-icons" class="fa-brands fa-css3 fa-2xl"></i></p>
                             </li>
 
-                            <li class="px-4 text-primary">
+                            <li class="px-4 text-info">
                                 <p><i id="skills-icons" class="fa-brands fa-square-github fa-2xl"></i></p>
                             </li>
 
 
-                            <li class="px-4 text-primary">
+                            <li class="px-4 text-info">
                                 <p><i id="skills-icons" class="fa-brands fa-js fa-2xl"></i></p>
                             </li>
 
@@ -155,7 +154,7 @@
                     </div>
 
                     <div>
-                        <ul id="about-list" class="list my-4 text-black">
+                        <ul id="about-list" class="list my-4 text-white">
                             <li class="py-2">HTML5</li>
                             <li class="py-2">CSS (Cascading Style Sheets)</li>
                             <li class="py-2">Java Script</li>
@@ -164,7 +163,7 @@
                             <li class="py-2">Interpersonal Relationships</li>
                             <li class="py-2">Time management</li>
                             <li class="py-2">Focus on Web Accessability</li>
-                            <li class="py-2">Communication</li>
+                            <li class="py-2">Effective Communication</li>
 
                         </ul>
                     </div>
