--- a/Work.html
+++ b/Work.html
@@ -128,7 +128,7 @@
                     
                     <img class="py-5 my-5 img-fluid" id="fidelity-logo" src="./img/fidelity-investments-logo-3.png" style="width: 35%;"
                         alt="fidelity investments logo">
-                    <div class="panel panel-default">
+                    <!-- <div class="panel panel-default"> -->
                         <div class="text-white my-4 panel-heading fw-bold">July 2022 - November
                             2022</div>
                         <ul id="list" class="text-white px-5">
@@ -170,7 +170,7 @@
                                 remedied.</li>
                         </ul>
                     </div>
-                </div>
+               
             </div>
         </div>
         <!-- </div> -->
