--- a/education.html
+++ b/education.html
@@ -16,13 +16,13 @@
 <body>
     <header>
 
-      <!-- Navigation -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
         <div class="container">
             <!-- Toggler/collapsible Button -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"><i class="bi bi-list"></i></span>
             </button>
             <!-- Logo or Brand -->
             <a class="navbar-brand ms-auto" href="#">Oliver Jarjosa</a>
