--- a/Work.html
+++ b/Work.html
@@ -180,7 +180,7 @@ body {
         <div class="container-fluid">
 
             <ul id="contactfooter" class="text-white text-center py-5">
-                <li id="linkedin" class="text-white"> <a class="text-white"
+                <li id="linkedin" class="text-white"> <a class="text-info"
                         href="https://www.linkedin.com/in/oliver-jarjosa/"><i
                             class="fa-brands fa-linkedin fa-2xl"></i></a></li>
             </ul>
