--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,22 @@
         .card {
             margin: 10px;
         }
+
+        .portfolio-button {
+            background-color: transparent;
+            border: 2px solid #fff;
+            color: #fff;
+            padding: 10px 20px;
+            font-size: 16px;
+            font-weight: bold;
+            border-radius: 5px;
+            transition: all 0.3s ease;
+        }
+
+        .portfolio-button:hover {
+            background-color: #fff;
+            color: #000;
+        }
     </style>
 </head>
 
@@ -108,7 +124,7 @@
         <div class="row">
             <!-- forms -->
             <div id="Contact" class="card contact-wrapper col-lg-12 col-md-12 px-5">
-                <p class="text-white fw-bold"><i class="fa-solid fa-house-chimney fa-lg"></i> Owings Mills, MD, 21117</p>
+                <p class="text-info fw-bold"><i class="fa-solid fa-house-chimney fa-lg"></i> Owings Mills, MD, 21117</p>
                 <p class="text-info mx-2 fw-bold"><i class="fa-solid fa-envelope fa-lg"></i> oliverjarjosa@gmail.com</p>
                 <!-- Input Form -->
                 <div class="contact-form">
@@ -190,27 +206,27 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <!-- <div class="col">
                 <div class="card py-2 mt-2">
                     <div class="card-body text-center">
-                        <i class="fa-brands fa-linkedin fa-2xl py-4" style="color: #ffffff;"></i>
+                        
                         <h4 class="text-uppercase m-0 text-white">Linkedin</h4>
                         <hr class="my-4 mx-auto" />
-                        <div class="fw-bold text-white-50"><a class="text-info" href="https://www.linkedin.com/in/oliver-jarjosa/" style="font-size: larger;">Linkedin</a></div>
+                        <div class="fw-bold text-white-50"><a class="text-info" href="https://www.linkedin.com/in/oliver-jarjosa/" style="font-size: larger;"><i class="fa-brands fa-linkedin fa-2xl py-4" style="color: #ffffff;"></i></a></div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
-    <!-- FOOTER -->
-    <footer class="container-fluid bg-black w-100">
-        <div id="my-socials" class="align-items-center py-4">
-            <div class="container"></div>
-            <!-- <p id="linkedin" class="text-white"> <a class="text-info"
-                    href="https://www.linkedin.com/in/oliver-jarjosa/"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
-            </p> -->
-        </div>
-    </footer>
+  <!--FOOTER-->
+  <footer class="footer container-fluid bg-black">
+    <div id="my-socials" class="align-items-center py-4">
+        <div class="container"></div>
+        <p id="linkedin" class="text-white"> <a class="text-info"
+                href="https://www.linkedin.com/in/oliver-jarjosa/"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+        </p>
+    </div>
+</footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
