--- a/Work.html
+++ b/Work.html
@@ -113,16 +113,18 @@ body {
             </div>
         </div>
     </nav>
-
-    <div class="grid-container">
+<main>
+    <div class="container">
         <!--Work & Education Sections-->
+
         <!--Card One-->
         <div class="cardp my-5">
             <div class="content justify-content-center">
+                <div class="container d-flex">
                 <img class="py-4 my-5" id="proscan-logo" src="./img/proscanImagingExcellenceLogo.png"
                     alt="Logo for ProScan Imaging">
-
-                <div class="panel-heading fw-bold text-white py-2">May 2023 - Current</div>
+                </div>
+                <div class="panel-heading fw-bold text-white py-2 text-center">May 2023 - Current</div>
 
                 <ul id="list" class="text-white px-5">
                     <li>Accurately entered data and corrected any information that was out of date.</li>
@@ -136,11 +138,11 @@ body {
 
         <div class="cardp my-5">
             <div class="content">
-
+                <div class="container d-flex">
                 <img class="py-4 my-5 w-50" id="blueboard-logo" src="./img/Blueboard-logo-high.png"
                     alt="blueboard inc logo">
-
-                <div class="text-white panel-heading fw-bold py-4">November 2022 - May 2023</div>
+                    </div>
+                <div class="text-white panel-heading fw-bold py-4 text-center">November 2022 - May 2023</div>
 
                 <ul id="list" class="text-white px-5">
                     <li>Provided customers with best deals and well-researched travel options.</li>
@@ -156,11 +158,12 @@ body {
         <div class="cardp my-5">
             <div class="content">
 
-
+                <div class="container d-flex">
                 <img class="py-5 my-5 img-fluid" id="fidelity-logo" src="./img/fidelity-investments-logo-3.png"
                     style="width: 35%;" alt="fidelity investments logo">
+                        </div>
 
-                <div class="text-white my-4 panel-heading fw-bold">July 2022 - November 2022</div>
+                <div class="text-white my-4 panel-heading fw-bold text-center">July 2022 - November 2022</div>
                 <ul id="list" class="text-white px-5">
                     <li>Engaged with participants with an empathetic, informative manner.</li>
                     <li>Practiced active listening and clarifying questioning in order to narrow down a participant's underlying needs.</li>
@@ -173,7 +176,7 @@ body {
         </div>
     </div>
     <!-- </div> -->
-
+</main>
 
     <!--FOOTER-->
     <footer class="bg-black">
